<?xml version="1.0"?>
<package format="3">
  <name>ros2_lifecycle</name>
  <version>0.0.0</version>
  <description>ROS2 Lifecycle Sensor Node Assignment</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
